update first phase v2.3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-header></app-header> -->
+<app-canvas-menu></app-canvas-menu>
 <router-outlet (activate)="onActivate($event)" ></router-outlet>
 <!-- <app-footer></app-footer> -->
