--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,6 +9,13 @@
                     </h5>
                     <p>Tel. 02-286-3484 ต่อ 335 - 336 หรือ E-mail : registrar_pvd@lhfund.co.th</p>
                 </div>
+                <div class="copyright-footer mb-2">
+                    <p >ต้องการสอบถามข้อมูล</p> 
+                    <p>ติดต่อผ่ายทะเบียนกองทุนสำรองเลี้ยงชีพ</p>
+                    <p><span>บลจ.แลนด์ แอนด์ เฮาส์ จำกัด</span></p>
+                    <p>Tel. 02-286-3484 ต่อ 335 - 336 </p>
+                    <p>หรือ E-mail : registrar_pvd@lhfund.co.th</p>
+                </div>
             </div>
         </div>
     </div>
