--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -208,7 +208,15 @@
                                                     <input id="password" name="password" maxlength="30" type="text" value="">
                                                 </div>
                                             </div>
-
+                                            <div class="col-md-3">
+                                                    <span>เบอร์โทรศัพท์ ที่ทำงาน</span>
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <div class="input-wrapper ">
+                                                        <input id="password" name="password" maxlength="30" type="text" value="">
+                                                    </div>
+                                                </div>
+<!-- 
                                             <div class="col-md-3">
                                                 <span>เบอร์โทรศัพท์ มือถือ</span>
                                             </div>
@@ -217,38 +225,32 @@
                                                 <div class="input-wrapper ">
                                                     <input id="password" name="password" maxlength="30" type="text" value="0850594153">
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
 
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                <span>เบอร์โทรศัพท์ ที่ทำงาน</span>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <div class="input-wrapper ">
-                                                    <input id="password" name="password" maxlength="30" type="text" value="">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <span>เบอร์โทรสาร</span>
-                                            </div>
-
-                                            <div class="col-md-3">
-                                                <div class="input-wrapper ">
-                                                    <input id="password" name="password" maxlength="30" type="text" value="">
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <!-- <div class="row">
+                                            
+                                            
+                                        </div> -->
 
                                         <div class="row">
-                                            <div class="col-md-3">
+                                                <div class="col-md-3">
+                                                        <span>เบอร์โทรสาร</span>
+                                                    </div>
+        
+                                                    <div class="col-md-3">
+                                                        <div class="input-wrapper ">
+                                                            <input id="password" name="password" maxlength="30" type="text" value="">
+                                                        </div>
+                                                    </div>
+                                            <!-- <div class="col-md-3">
                                                 <span>อีเมล</span>
                                             </div>
                                             <div class="col-md-3">
                                                 <div class="input-wrapper ">
                                                     <input id="password" name="password" maxlength="30" type="text" value="natiwat@hotmail.com">
                                                 </div>
-                                            </div>
+                                            </div> -->
 
                                             <div class="col-md-3">
                                                 <span>หักภาษี ณ ที่จ่าย</span>
