--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -11,12 +11,12 @@
                       เมนูกองทุน
                     </button>
                     <ul class="dropdown-menu">
-                      <li>
+                      <!-- <li>
                         <a (click)="checkpage('history')" title="ประวัติซื้อขาย">ประวัติซื้อขาย</a>
                       </li>
                       <li>
                         <a (click)="checkpage('')" title="ยอดคงเหลือ">ยอดคงเหลือ</a>
-                      </li>
+                      </li> -->
                       <li>
                         <a (click)="checkpage('receipt-history')" title="ประวัติการรับเงินปันผล">ประวัติการรับเงินปันผล</a>
                       </li>
@@ -35,16 +35,19 @@
                       <li>
                         <a (click)="checkpage('confirmation')" title="ใบยืนยันการทำรายการ">ใบยืนยันการทำรายการ</a>
                       </li>
+                      <li>
+                          <a (click)="checkpage('type')" title="ประเภทรายการ">ประเภทรายการ</a>
+                      </li>
                     </ul>
                     <div class="clearfix"></div>
                   </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
-                <li role="presentation" id="menu1">
+                <!-- <li role="presentation" id="menu1">
                   <a title="ประวัติซื้อขาย" (click)="checkpage('past-events')">ประวัติซื้อขาย</a>
                 </li>
                 <li role="presentation" id="menu2">
                   <a title="ยอดคงเหลือ" (click)="checkpage('sell')">ยอดคงเหลือ</a>
-                </li>
+                </li> -->
                 <li role="presentation" id="menu3">
                   <a title="ประวัติการรับเงินปันผล" (click)="checkpage('receipt-history')">ประวัติการรับเงินปันผล</a>
                 </li>
@@ -62,6 +65,9 @@
                 </li>
                 <li role="presentation" id="menu8">
                   <a title="ใบยืนยันการทำรายการ" (click)="checkpage('confirmation')">ใบยืนยันการทำรายการ</a>
+                </li>
+                <li role="presentation" id="menu9">
+                  <a title="ประเภทรายการ" (click)="checkpage('type')">ประเภทรายการ</a>
                 </li>
 
               </ul>
@@ -291,12 +297,12 @@
                   เมนูกองทุน
                 </button>
                 <ul class="dropdown-menu">
-                  <li>
+                  <!-- <li>
                     <a (click)="checkpage('history')" title="ประวัติซื้อขาย">ประวัติซื้อขาย</a>
                   </li>
                   <li>
                     <a (click)="checkpage('')" title="ยอดคงเหลือ">ยอดคงเหลือ</a>
-                  </li>
+                  </li> -->
                   <li>
                     <a (click)="checkpage('receipt-history')" title="ประวัติการรับเงินปันผล">ประวัติการรับเงินปันผล</a>
                   </li>
@@ -319,12 +325,12 @@
                 <div class="clearfix"></div>
               </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
-                <li role="presentation" id="menu1">
+                <!-- <li role="presentation" id="menu1">
                   <a title="ประวัติซื้อขาย" (click)="checkpage('history')">ประวัติซื้อขาย</a>
                 </li>
                 <li role="presentation" id="menu2">
                   <a title="ยอดคงเหลือ" (click)="checkpage('sell')">ยอดคงเหลือ</a>
-                </li>
+                </li> -->
                 <li role="presentation" id="menu3">
                   <a title="ประวัติการรับเงินปันผล" (click)="checkpage('receipt-history')">ประวัติการรับเงินปันผล</a>
                 </li>
@@ -494,12 +500,12 @@
                       เมนูกองทุน
                     </button>
                     <ul class="dropdown-menu">
-                      <li>
+                      <!-- <li>
                         <a (click)="checkpage('history')" title="ประวัติซื้อขาย">ประวัติซื้อขาย</a>
                       </li>
                       <li>
                         <a (click)="checkpage('')" title="ยอดคงเหลือ">ยอดคงเหลือ</a>
-                      </li>
+                      </li> -->
                       <li>
                         <a (click)="checkpage('receipt-history')" title="ประวัติการรับเงินปันผล">ประวัติการรับเงินปันผล</a>
                       </li>
@@ -522,12 +528,12 @@
                     <div class="clearfix"></div>
                   </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
-                <li role="presentation" id="menu1">
+                <!-- <li role="presentation" id="menu1">
                   <a title="ประวัติซื้อขาย" (click)="checkpage('history')">ประวัติซื้อขาย</a>
                 </li>
                 <li role="presentation" id="menu2">
                   <a title="ยอดคงเหลือ" (click)="checkpage('sell')">ยอดคงเหลือ</a>
-                </li>
+                </li> -->
                 <li role="presentation" id="menu3">
                   <a title="ประวัติการรับเงินปันผล" (click)="checkpage('receipt-history')">ประวัติการรับเงินปันผล</a>
                 </li>
@@ -764,12 +770,12 @@
                       เมนูกองทุน
                     </button>
                     <ul class="dropdown-menu">
-                      <li>
+                      <!-- <li>
                         <a (click)="checkpage('history')" title="ประวัติซื้อขาย">ประวัติซื้อขาย</a>
                       </li>
                       <li>
                         <a (click)="checkpage('')" title="ยอดคงเหลือ">ยอดคงเหลือ</a>
-                      </li>
+                      </li> -->
                       <li>
                         <a (click)="checkpage('receipt-history')" title="ประวัติการรับเงินปันผล">ประวัติการรับเงินปันผล</a>
                       </li>
@@ -792,12 +798,12 @@
                     <div class="clearfix"></div>
                   </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
-                <li role="presentation" id="menu1">
+                <!-- <li role="presentation" id="menu1">
                   <a title="ประวัติซื้อขาย" (click)="checkpage('history')">ประวัติซื้อขาย</a>
                 </li>
                 <li role="presentation" id="menu2">
                   <a title="ยอดคงเหลือ" (click)="checkpage('sell')">ยอดคงเหลือ</a>
-                </li>
+                </li> -->
                 <li role="presentation" id="menu3">
                   <a title="ประวัติการรับเงินปันผล" (click)="checkpage('receipt-history')">ประวัติการรับเงินปันผล</a>
                 </li>
@@ -1085,12 +1091,12 @@
                       เมนูกองทุน
                     </button>
                     <ul class="dropdown-menu">
-                      <li>
+                      <!-- <li>
                         <a (click)="checkpage('history')" title="ประวัติซื้อขาย">ประวัติซื้อขาย</a>
                       </li>
                       <li>
                         <a (click)="checkpage('')" title="ยอดคงเหลือ">ยอดคงเหลือ</a>
-                      </li>
+                      </li> -->
                       <li>
                         <a (click)="checkpage('receipt-history')" title="ประวัติการรับเงินปันผล">ประวัติการรับเงินปันผล</a>
                       </li>
@@ -1113,12 +1119,12 @@
                     <div class="clearfix"></div>
                   </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
-                <li role="presentation" id="menu1">
+                <!-- <li role="presentation" id="menu1">
                   <a title="ประวัติซื้อขาย" (click)="checkpage('history')">ประวัติซื้อขาย</a>
                 </li>
                 <li role="presentation" id="menu2">
                   <a title="ยอดคงเหลือ" (click)="checkpage('sell')">ยอดคงเหลือ</a>
-                </li>
+                </li> -->
                 <li role="presentation" id="menu3" class="current">
                   <a title="ประวัติการรับเงินปันผล" (click)="checkpage('receipt-history')">ประวัติการรับเงินปันผล</a>
                 </li>
@@ -1488,5 +1494,171 @@
         </div>
       </div>
     </div>
+    <div class="mutual-fund-wrapper" *ngIf="page == 'type'">
+        <div class="max-width-wrapper">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="tabs-menu-wrapper">
+                  <div class="dropdown dropdown-content">
+                      <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        เมนูกองทุน
+                      </button>
+                      <ul class="dropdown-menu">
+                        <!-- <li>
+                          <a (click)="checkpage('history')" title="ประวัติซื้อขาย">ประวัติซื้อขาย</a>
+                        </li>
+                        <li>
+                          <a (click)="checkpage('')" title="ยอดคงเหลือ">ยอดคงเหลือ</a>
+                        </li> -->
+                        <li>
+                          <a (click)="checkpage('receipt-history')" title="ประวัติการรับเงินปันผล">ประวัติการรับเงินปันผล</a>
+                        </li>
+                        <li>
+                          <a (click)="checkpage('past-events')" title="รายการเคลื่อนไหวที่ผ่านมา">รายการเคลื่อนไหวที่ผ่านมา</a>
+                        </li>
+                        <li>
+                          <a (click)="checkpage('summary')" title="สรุปกำไร/ขาดทุน">สรุปกำไร/ขาดทุน</a>
+                        </li>
+                        <li>
+                          <a (click)="checkpage('')" title="รายการวันนี้">รายการวันนี้</a>
+                        </li>
+                        <li>
+                          <a (click)="checkpage('not-available-list')" title="รายการที่ยังไม่มีผล">รายการที่ยังไม่มีผล</a>
+                        </li>
+                        <li>
+                          <a (click)="checkpage('confirmation')" title="ใบยืนยันการทำรายการ">ใบยืนยันการทำรายการ</a>
+                        </li>
+                        <li>
+                          <a (click)="checkpage('type')" title="ประเภทรายการ">ประเภทรายการ</a>
+                        </li>
+                      </ul>
+                      <div class="clearfix"></div>
+                    </div>
+                <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
+                  <!-- <li role="presentation" id="menu1">
+                    <a title="ประวัติซื้อขาย" (click)="checkpage('history')">ประวัติซื้อขาย</a>
+                  </li>
+                  <li role="presentation" id="menu2">
+                    <a title="ยอดคงเหลือ" (click)="checkpage('sell')">ยอดคงเหลือ</a>
+                  </li> -->
+                  <li role="presentation" id="menu3" class="current">
+                    <a title="ประวัติการรับเงินปันผล" (click)="checkpage('receipt-history')">ประวัติการรับเงินปันผล</a>
+                  </li>
+                  <li role="presentation" id="menu4">
+                    <a title="รายการเคลื่อนไหวที่ผ่านมา" (click)="checkpage('past-events')">รายการเคลื่อนไหวที่ผ่านมา</a>
+                  </li>
+                  <li role="presentation" id="menu5">
+                    <a title="สรุปกำไร/ขาดทุน" (click)="checkpage('summary')">สรุปกำไร/ขาดทุน</a>
+                  </li>
+                  <li role="presentation" id="menu6">
+                    <a title="รายการวันนี้">รายการวันนี้</a>
+                  </li>
+                  <li role="presentation" id="menu7">
+                    <a title="รายการที่ยังไม่มีผล" (click)="checkpage('not-available-list')">รายการที่ยังไม่มีผล</a>
+                  </li>
+                  <li role="presentation" id="menu8">
+                    <a title="ใบยืนยันการทำรายการ" (click)="checkpage('confirmation')">ใบยืนยันการทำรายการ</a>
+                  </li>
+                  <li role="presentation" id="menu9">
+                      <a title="ประเภทรายการ" (click)="checkpage('type')">ประเภทรายการ</a>
+                    </li>
+  
+                </ul>
+              </div>
+  
+              <div class="fund-table-wrapper">                
+                <div class="detail-body-wrapper">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h4>คำย่อ</h4>
+                    </div>
+                    <div class="col-md-12">
+                        <h4>ประเภทการทำรายการ</h4>
+                    </div>
+                    <div class="col-md-3">
+                      <p class="no-margin">BF = รายการยกมา</p>
+                    </div>
+                    <div class="col-md-3">
+                      <p class="no-margin">SUB = รายการซื้อ</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">RDM = รายการขาย</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">SWI = รายการสับเปลี่ยนเข้า</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">SWO = รายการสับเปลี่ยนออก</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">ROLL = รายการลงทุนต่อเนื่อง</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">AR = รายการขายคืนอัตโนมัติ</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">AS = รายการรับซื้ออัตโนมัติ</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">TRI = รายการรับโอน</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">TRO = รายการโอนออก</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">CFM = ยืนยันรายการ</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">UD = แสดงรายการมูลค่าหน่วยลงทุน</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">TOTAL SUM = รวมเงินลงทุน</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">CR = เช็คคืน</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">REJ = รายการยกเลิก</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">ADJ = รายการปรับปรุง</p>
+                    </div>
+
+                    <div class="col-md-12 mt-3">
+                        <h4>ช่องทางการทำรายการ</h4>
+                    </div>
+
+                    <div class="col-md-3">
+                        <p class="no-margin">LHF = รายการผ่าน LH FUND</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">LHF-I = รายการผ่าน Internet LH FUND</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">P = รายการผ่าน LH BANK</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">INET = รายการผ่าน LH BANK Speedy</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">MNET = รายการผ่าน Mobile Banking</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">ATM = รายการผ่าน ATM LH BANK</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="no-margin">SA = รายการผ่าน Selling Agent</p>
+                    </div>
+                   
+                  </div>
+  
+  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
   </div>
   <app-footer></app-footer>
