--- a/src/app/transaction/transaction.component.scss
+++ b/src/app/transaction/transaction.component.scss
@@ -86,3 +86,8 @@
         }
     }
 }
+.modal-header{
+    background-color: $color-red;
+    border-radius:0px; 
+    // color: $color-white!important;
+}
