--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,7 +72,7 @@
                   </nav>                    
                   <!-- end Nav -->
                   <a id="nav-expander" class="nav-expander fixed">
-                    <i class="fa fa-bars" aria-hidden="true"></i>
+                    <i class="fa fa-bars" aria-hidden="true" (click)="shownav()"></i>
                   </a>
               </div>
           </div>
