--- a/src/app/myport/myport.component.html
+++ b/src/app/myport/myport.component.html
@@ -52,8 +52,8 @@
                                                 </a>
                                             </li>
                                             <li class="ico-yt">
-                                                <a href="#" title="youtube">
-                                                    <img src="/assets/Images/icons/ico-print.png" />
+                                                <a title="youtube">
+                                                    <img src="/assets/Images/icons/ico-print.png" (click)="print()"/>
                                                 </a>
                                             </li>
 
