--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -16,12 +16,13 @@
 @media screen and (max-width: 999px) {
   .fund-list-wrapper .title-heading {
     height: 120px;
-    vertical-align: middle; } }
+    vertical-align: middle;
+    padding: 25px 15px; } }
 
 @media screen and (max-width: 767px) {
   .fund-list-wrapper h3 {
-    font-size: 35px; }
+    font-size: 30px; }
   .fund-list-wrapper .title-heading {
     height: 120px;
-    padding: 40px;
+    padding: 30px;
     vertical-align: middle; } }
