--- a/src/assets/Content/default/css/content/myport.css
+++ b/src/assets/Content/default/css/content/myport.css
@@ -724,8 +724,9 @@
     margin: 0 auto;
     border-bottom: 5px solid #f5f5f5;
     width: 100%; }
-    .mutual-fund-wrapper .detail-body-wrapper h4 {
-      display: block; }
+    .mutual-fund-wrapper .detail-body-wrapper h4, .mutual-fund-wrapper .detail-body-wrapper span {
+      display: inline-block;
+      margin-right: 10px; }
   .mutual-fund-wrapper .detail-footer-wrapper {
     position: relative;
     max-width: 100%;
